[package]
name = "khive-pack-gtd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "GTD verb pack — task lifecycle (assign/next/complete/transition) over the notes substrate"

[lib]
bench = false

[dependencies]
khive-types = { version = "0.3.1", path = "../khive-types", features = ["serde"] }
khive-runtime = { version = "0.3.1", path = "../khive-runtime" }
inventory = { workspace = true }
khive-storage = { version = "0.3.1", path = "../khive-storage" }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
khive-pack-kg = { version = "0.3.1", path = "../khive-pack-kg" }
criterion = { workspace = true }

[[bench]]
name = "gtd_bench"
harness = false
