[package]
name = "khive-pack-kg"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "KG verb pack — entity/note CRUD, graph traversal, hybrid search for research knowledge graphs"

[dependencies]
khive-types = { version = "0.2.10", path = "../khive-types", features = ["serde"] }
khive-runtime = { version = "0.2.10", path = "../khive-runtime" }
khive-query = { version = "0.2.10", path = "../khive-query" }
inventory = { workspace = true }
khive-storage = { version = "0.2.10", path = "../khive-storage" }
async-trait = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
criterion = { workspace = true }
serde_json = { workspace = true }

[[test]]
name = "integration"
path = "tests/integration.rs"

[[bench]]
name = "kg_bench"
harness = false
path = "benches/kg_bench.rs"
