[package]
name = "khive-pack-knowledge"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Knowledge verb pack — lore corpus (atoms/domains), TF-IDF retrieval, concept registration"

[dependencies]
khive-types = { version = "0.3.0", path = "../khive-types", features = ["serde"] }
khive-brain-core = { version = "0.3.0", path = "../khive-brain-core" }
khive-runtime = { version = "0.3.0", path = "../khive-runtime" }
khive-storage = { version = "0.3.0", path = "../khive-storage" }
khive-fold = { version = "0.3.0", path = "../khive-fold" }
khive-fusion = { version = "0.3.0", path = "../khive-fusion" }
khive-score = { version = "0.3.0", path = "../khive-score" }
khive-vamana = { version = "0.3.0", path = "../khive-vamana" }
inventory = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
khive-pack-kg = { version = "0.3.0", path = "../khive-pack-kg" }
khive-pack-brain = { version = "0.3.0", path = "../khive-pack-brain" }
khive-storage = { version = "0.3.0", path = "../khive-storage" }
tokio = { workspace = true, features = ["test-util"] }
lattice-embed = { workspace = true }
criterion = { workspace = true }
tempfile = { workspace = true }

[[bench]]
name = "knowledge_bench"
harness = false

[[bench]]
name = "search_latency"
harness = false

[[test]]
name = "integration"
path = "tests/integration.rs"

[[test]]
name = "fixes"
path = "tests/fixes.rs"

[[test]]
name = "feedback"
path = "tests/feedback.rs"

[[test]]
name = "bench"
path = "tests/bench.rs"
