[package]
name = "khive-pack-memory"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Memory verb pack — remember/recall semantics with decay-aware ranking"

[lib]
bench = false

[dependencies]
khive-types = { version = "0.4.0", path = "../khive-types", features = ["serde"] }
khive-runtime = { version = "0.4.0", path = "../khive-runtime" }
khive-fusion = { version = "0.4.0", path = "../khive-fusion" }
khive-retrieval = { version = "0.4.0", path = "../khive-retrieval" }
khive-score = { version = "0.4.0", path = "../khive-score" }
khive-brain-core = { version = "0.4.0", path = "../khive-brain-core" }
# #866: `memory.recall` reuses `serve_ledger::compute_query_class` so the
# `recall_executed` event's query_class matches the ADR-081 serve-ledger row's
# exactly (same recall serve, one deterministic key). No cycle: khive-pack-brain's
# own [dependencies] never reference khive-pack-memory (only its
# [dev-dependencies] does, for the reverse dispatch-hook integration test).
khive-pack-brain = { version = "0.4.0", path = "../khive-pack-brain" }
khive-vamana = { version = "0.4.0", path = "../khive-vamana" }
blake3 = { workspace = true }
inventory = { workspace = true }
khive-storage = { version = "0.4.0", path = "../khive-storage" }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
lru = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
khive-db = { version = "0.4.0", path = "../khive-db" }
khive-pack-kg = { version = "0.4.0", path = "../khive-pack-kg" }
tokio = { workspace = true, features = ["test-util"] }
lattice-embed = { workspace = true }
async-trait = { workspace = true }
tempfile = { workspace = true }
criterion = { workspace = true }
serial_test = { workspace = true }

[[test]]
name = "integration"
path = "tests/integration.rs"

[[bench]]
name = "e2e_recall"
harness = false

[[bench]]
name = "fts_gather"
harness = false

[[bench]]
name = "memory_bench"
harness = false
