[package]
name = "khive-pack-schedule"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Schedule pack — time-triggered intent storage (remind, schedule, agenda, cancel) (ADR-040)"

[lib]
bench = false

[dependencies]
khive-types = { version = "0.5.0", path = "../khive-types", features = ["serde"] }
khive-runtime = { version = "0.5.0", path = "../khive-runtime" }
khive-storage = { version = "0.5.0", path = "../khive-storage" }
khive-request = { version = "0.5.0", path = "../khive-request" }
inventory = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
khive-pack-kg = { version = "0.5.0", path = "../khive-pack-kg" }
khive-pack-comm = { version = "0.5.0", path = "../khive-pack-comm" }
khive-pack-git = { version = "0.5.0", path = "../khive-pack-git" }
criterion = { workspace = true }

[[bench]]
name = "schedule_bench"
harness = false
