[package]
name = "khive-pack-session"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Session verb pack — store/list/get over the notes substrate (ADR-080)"

[dependencies]
khive-types = { version = "0.2.12", path = "../khive-types", features = ["serde"] }
khive-runtime = { version = "0.2.12", path = "../khive-runtime" }
inventory = { workspace = true }
khive-storage = { version = "0.2.12", path = "../khive-storage" }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
khive-pack-kg = { version = "0.2.12", path = "../khive-pack-kg" }
tempfile = { workspace = true }
