[package]
name = "khive-pack-session"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Session verb pack - store/list/resume/export over the notes substrate"

[dependencies]
khive-types = { version = "0.3.0", path = "../khive-types", features = ["serde"] }
khive-runtime = { version = "0.3.0", path = "../khive-runtime" }
inventory = { workspace = true }
khive-storage = { version = "0.3.0", path = "../khive-storage" }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
khive-pack-kg = { version = "0.3.0", path = "../khive-pack-kg" }
tempfile = { workspace = true }
