[package]
name = "khive-pack-template"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Reference template for new khive packs (ADR-023 §8). Copy this crate to get a working pack scaffold."

[dependencies]
khive-types = { version = "0.2.11", path = "../khive-types", features = ["serde"] }
khive-runtime = { version = "0.2.11", path = "../khive-runtime" }
inventory = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
khive-pack-kg = { version = "0.2.11", path = "../khive-pack-kg" }
