[package]
name = "khive-pack-workspace"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Workspace pack  -  pack-owned `workspace` entity kind with typed `contains` membership edges to issue/pull_request/commit/task/session records (issue #873)"

[dependencies]
khive-types = { version = "0.6.0", path = "../khive-types", features = ["serde"] }
khive-runtime = { version = "0.6.0", path = "../khive-runtime" }
inventory = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
khive-pack-kg = { version = "0.6.0", path = "../khive-pack-kg" }
khive-pack-gtd = { version = "0.6.0", path = "../khive-pack-gtd" }
khive-pack-git = { version = "0.6.0", path = "../khive-pack-git" }
khive-pack-session = { version = "0.6.0", path = "../khive-pack-session" }
