[package]
name = "khive-quant"
description = "SQ8 scalar quantization codecs (global-scale symmetric + per-dim affine) shared by HNSW and Vamana indexes."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
bench = false

[dependencies]
rayon = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "sq8_kernel"
harness = false
